# inspector-gadget

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
ci/: ubuntu-install-packages
scripts/: graph_core_runtimes.py  tests.csv
src/: arch.rs  capstone_tools.rs  capstone_utils.rs  cli_args.rs  disasm_tools.rs  gadget_tree.rs  ig_error.rs  main.rs
