[package]
name = "inspector_gadget"
version = "0.1.0"
edition = "2021"

[dependencies]
capstone = "0.12.0"
capstone-sys = "0.16.0"
clap = { version = "4.5.4", features = ["derive"] }
indicatif = { version = "0.17.8", features = ["rayon"]}
itertools = "0.12.1"
object = "0.35.0"
rayon = "1.10.0"
regex = "1.10.4"