[package]
name = "inspector-gadget"
version = "0.3.0"
authors = ["garnt"]
description= """
A cli-based, multi-architecture gadget-finding tool, designed for fast
operation, even with large binaries like browser engines and OS kernels.
"""
documentation = "https://github.com/garnts/inspector-gadget"
homepage = "https://github.com/garnts/inspector-gadget"
repository = "https://github.com/garnts/inspector-gadget"
keywords = ["gadget", "rop"]
license = "GPLv3"
edition = "2021"

[dependencies]
capstone = "0.12.0"
capstone-sys = "0.16.0"
clap = { version = "4.5.4", features = ["derive"] }
indicatif = { version = "0.17.8", features = ["rayon"]}
itertools = "0.12.1"
object = "0.35.0"
rayon = "1.10.0"
regex = "1.10.4"